examples/c/error-codes/violates-constraint/nonfatal/CV-TCANON4-bad-static.output
CV-TCANON4-bad-static.c:2:7: error: Declaration with no type specifiers.

    Constraint violation (CV-TCANON4):
        see C11 section 6.7.2:2 http://rvdoc.org/C11/6.7.2
        see CERT-C section MSC40-C http://rvdoc.org/CERT-C/MSC40-C
        see MISRA-C section 8.1:1 http://rvdoc.org/MISRA-C/8.1

CV-TCANON4-bad-static.c:3:7: error: Declaration with no type specifiers.

    Constraint violation (CV-TCANON4):
        see C11 section 6.7.2:2 http://rvdoc.org/C11/6.7.2
        see CERT-C section MSC40-C http://rvdoc.org/CERT-C/MSC40-C
        see MISRA-C section 8.1:1 http://rvdoc.org/MISRA-C/8.1

CV-TCANON4-bad-static.c:4:7: error: Declaration with no type specifiers.

    Constraint violation (CV-TCANON4):
        see C11 section 6.7.2:2 http://rvdoc.org/C11/6.7.2
        see CERT-C section MSC40-C http://rvdoc.org/CERT-C/MSC40-C
        see MISRA-C section 8.1:1 http://rvdoc.org/MISRA-C/8.1

CV-TCANON4-bad-static.c:5:7: error: Declaration with no type specifiers.

    Constraint violation (CV-TCANON4):
        see C11 section 6.7.2:2 http://rvdoc.org/C11/6.7.2
        see CERT-C section MSC40-C http://rvdoc.org/CERT-C/MSC40-C
        see MISRA-C section 8.1:1 http://rvdoc.org/MISRA-C/8.1

